--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 library(svydb)
 ```
 
+## svydb - Survey statistics in a database
+
 - [Introduction](#intro)
 - [Installation](#installation)
 - [Examples](#examples)
